# better-morning

./: .gitignore  README.md  config.toml  daily-digest-2025-09-28.md  pyproject.toml  run.sh  run_local.py
.github/workflows/: daily_digest.yml
ai/: DESIGN.md  RULES.md
collections/: 00-concorsi.toml  00-general.toml  00-general.toml.back  01-local.toml  01-local.toml.back  010-local.toml  011-albo_pretorio.toml  02-commenti.toml  03-universita.toml  03-universita.toml.back  04-research.toml  05-scholar.toml  commenti.toml  default_news.toml  example1.toml  general.toml  local.toml  research.toml  scholar.toml  universita.toml
history/: General Daily News_articles.json
src/: main.py
src/better_morning/: config.py  content_extractor.py  document_generator.py  llm_summarizer.py  rss_fetcher.py
tests/: test_config.py  test_content_extractor.py  test_document_generator.py  test_integration.py  test_llm_summarizer.py  test_rss_fetcher.py
