[project]
name = "better-morning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.0",
  "feedparser>=6.0.12",
  "litellm>=1.77.5",
  "pydantic>=2.11.9",
  "python-magic>=0.4.27",
  "requests>=2.32.5",
  "toml>=0.10.2",
]
